[package]
name = "ruslovo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "3.0.14", features = ["derive"] }
regex = "1.5"
ureq = { version = "2.4.0", features = ["charset"]}
tabled = "0.4.2"
tl = "0.6.1"
