[package]
name = "ruslovo"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "3.2", features = ["derive"] }
regex = "1.7"
ureq = { version = "2.5", features = ["charset"] }
tabled = "0.6"
tl = "0.7"

[[bin]]
name = "rusl"
path = "src/main.rs"
